--- a/webgl/furniture/config.json
+++ b/webgl/furniture/config.json
@@ -1,7 +1,8 @@
 {
   "color": {"r": 255, "g": 255, "b": 255 },
   "roughness": 1,
-  "metalness": 1,
-  "envMapIntensity": 0,
+  "metalness": 0,
+  "envMapIntensity": 1,
+  "aoMapIntensity": 1,
   "wireframe": false
 }
