--- a/webgl/webplugin/config.json
+++ b/webgl/webplugin/config.json
@@ -1,9 +1,10 @@
 {
-  "color": {"r": 221, "g": 250, "b": 243 },
+  "color": {"r": 255, "g": 255, "b": 255 },
   "metalness": 0.854,
   "roughness": 0.9,
-  "envMapIntensity": 9,
+  "envMapIntensity": 4,
   "aoMapIntensity": 1,
+  "toneMappingExposure": 1,  
   "wireframe": false,
   "antialias": true
 }
