--- a/webgl/QuickLook/.htaccess
+++ b/webgl/QuickLook/.htaccess
@@ -1,3 +1,4 @@
-<FilesMatch "\.(usdz)$">
-Header set Content-Disposition attachment
+<FilesMatch ".+\.(usdz)$">
+    Header set Content-Type "model/vnd.usdz+zip"
+    Header set Content-Disposition "attachment"
 </FilesMatch>
